[package]
name = "waylrc"
version = "2.2.3"
edition = "2021"
authors = ["hafeoz <me@zony.dev>"]
description = "A Waybar module to display currently playing song lyrics"
readme = "README.md"
repository = "https://github.com/hafeoz/waylrc"
license = "0BSD OR CC0-1.0 OR WTFPL"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] } # Command line parsing
urlencoding = "2.1.3" # D-Bus URL parsing
lofty = "0.22.1" # Parsing audio file tags
zbus = { version = "5.3.1", default-features = false, features = ["tokio"] } # D-Bus MPRIS connectivity

# Async stuff
futures-lite = "2.6.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt", "macros"] }

# Error handling
anyhow = "1.0.95"
tracing = { version = "0.1.41", features = ["max_level_trace", "release_max_level_warn"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Waybar serialization
serde = "1.0.217"
serde_json = "1.0.138"
html-escape = "0.2.13"

[profile.release]
codegen-units = 1
lto = true
